# R-Type

./: .gitattributes  .gitignore  CMakeLists.txt  Client.asta  README  README.md  RFCprotocol.txt  Visual Studio 14 2015.bat  protocol.txt
client/: CMakeLists.txt  conf.ini
client/includes/: AnimatedSprite.hh  Box.hh  Button.hh  CallbackFunctions.hh  Cell.hh  Chat.hh  CheckBox.hh  Color.hh  CreateGameMenu.hh  Credits.hh  DisplayUpdater.hh  Drawable.hpp  Game.hh  GraphicEngine.hh  ICallBack.hh  IDrawable.hh  IGraphicEngine.hh  ISystemAudio.hh  Keyboard.hh  ListEnemies.hh  ListPlayers.hh  LobbyMenu.hh  MainMenu.hh  MainMenuFunctions.hh  Menu.hh  NetworkClient.hh  OnlineMenu.hh  OnlineMenuFunctions.hh  OptionMenu.hh  PackageSorter.hh  PackageStorage.hh  Packager.hh  PackagerTranslator.hh  ScrollView.hh  Sprite.hh  SystemAudio.hh  Text.hh  TextField.hh  Transformation.hh
client/ressources/: buttonTemplate.psd  textzoneTemplate.psd
client/src/: AnimatedSprite.cpp  Box.cpp  Button.cpp  CallbackFunctions.cpp  Cell.cpp  Chat.cpp  CheckBox.cpp  Color.cpp  CreateGameMenu.cpp  Credits.cpp  DisplayUpdater.cpp  Game.cpp  GraphicEngine.cpp  Keyboard.cpp  ListEnemies.cpp  ListPlayers.cpp  LobbyMenu.cpp  MainMenu.cpp  MainMenuFunctions.cpp  Menu.cpp  NetworkClient.cpp  OnlineMenu.cpp  OnlineMenuFunctions.cpp  OptionMenu.cpp  PackageSorter.cpp  PackageStorage.cpp  Packager.cpp  PackagerTranslator.cpp  ScrollView.cpp  Sprite.cpp  SystemAudio.cpp  Text.cpp  TextField.cpp  Transformation.cpp  main.cpp
common/: CMakeLists.txt
common/includes/: Addr.hh  BonusMalus.hh  Buffer.hh  Bullet.hh  Debug.hh  DequeSecure.hh  Disconnected.hh  DynamicLib.hh  DynamicLibUnix.hh  DynamicLibWin.hh  Enemy.hh  IDynamicLib.hh  IMutex.hh  IOEvent.hh  IPlayer.hh  IPlugin.hh  ISemaphore.hh  ISignal.hh  ISocketTCP.hh  ISocketUDP.hh  ISystemFile.hh  IThread.hh  ITimer.hh  ListSecure.hh  Locker.hh  Mutex.hh  Object.hh  Obstacle.hh  PaquetTCP.hh  ParserIni.hh  Patern.hh  Physics.hh  Player.hh  QueueSecure.hh  Semaphore.hh  SemaphoreUnix.hh  SemaphoreWin.hh  SignalUnix.hh  SignalWin.hh  Signals.hh  (+17 more)
common/includes/Paquet/: Paquet.hh  PaquetAttrBonus.hh  PaquetBonusMalus.hh  PaquetChat.hh  PaquetCreateParty.hh  PaquetDeath.hh  PaquetEnemy.hh  PaquetFirst.hh  PaquetFirstUDP.hh  PaquetJoinParty.hh  PaquetLaunch.hh  PaquetLeave.hh  PaquetLife.hh  PaquetListParties.hh  PaquetListPlayers.hh  PaquetObstacle.hh  PaquetPlayerCoord.hh  PaquetPlayerShot.hh  PaquetReady.hh  PaquetRename.hh  PaquetRequestParties.hh  PaquetRequestPlayers.hh  PaquetResponse.hh  Paquets.hh
common/src/: Addr.cpp  BonusMalus.cpp  Buffer.cpp  Bullet.cpp  DynamicLibUnix.cpp  DynamicLibWin.cpp  Enemy.cpp  IOEvent.cpp  Mutex.cpp  Object.cpp  Obstacle.cpp  PaquetTCP.cpp  ParserIni.cpp  Patern.cpp  Physics.cpp  Player.cpp  SemaphoreUnix.cpp  SemaphoreWin.cpp  SignalUnix.cpp  SignalWin.cpp  SocketTCPUnix.cpp  SocketTCPWin.cpp  SocketUDPUnix.cpp  SocketUDPWin.cpp  SystemFileUnix.cpp  SystemFileWin.cpp  TaskScheduler.cpp  ThreadUnix.cpp  ThreadWin.cpp  Timer.cpp  Tools.cpp
common/src/Paquet/: PaquetAttrBonus.cpp  PaquetBonusMalus.cpp  PaquetChat.cpp  PaquetCreateParty.cpp  PaquetDeath.cpp  PaquetEnemy.cpp  PaquetFirst.cpp  PaquetFirstUDP.cpp  PaquetJoinParty.cpp  PaquetLaunch.cpp  PaquetLeave.cpp  PaquetLife.cpp  PaquetListParties.cpp  PaquetListPlayers.cpp  PaquetObstacle.cpp  PaquetPlayerCoord.cpp  PaquetPlayerShot.cpp  PaquetReady.cpp  PaquetRename.cpp  PaquetRequestParties.cpp  PaquetRequestPlayers.cpp  PaquetResponse.cpp
enemies/: enemy1.cpp  enemy1.hh
server/: CMakeLists.txt  Makefile
server/doc/: CMakeLists.txt  Doxyfile.in  light.css
server/doc/CMakeModules/: FindDot.cmake
server/includes/: EnemyLoader.hh  INetwork.cpp  INetwork.hh  ISignal.hh  Manager.hh  Network.hh  Party.hh  PlayerCoord.hh  PlayerShot.hh  Selector.hh  Server.hh  Signal.hh  SignalUnix.hh  SignalWin.hh  Wave.hh
server/src/: EnemyLoader.cpp  Manager.cpp  Network.cpp  Party.cpp  PlayerCoord.cpp  PlayerShot.cpp  Selector.cpp  Server.cpp  Signal.cpp  SignalUnix.cpp  SignalWin.cpp  Wave.cpp  main.cpp
